# finance-tracker

./: .editorconfig  .gitignore  .gitmodules  .ruff.toml  Dockerfile  Pipfile  README.md  config.py  pyproject.toml  shell.nix  victor.bean  victor.beancount
documents/CaixaBank/beancount/2019/: 2019-caixabank.bean
documents/CaixaBank/beancount/2020/: 2020-caixabank.bean
documents/CaixaBank/beancount/2021/: 2021-caixabank.beancount
documents/CaixaBank/beancount/2022/: 2022-caixabank.beancount
documents/CaixaBank/beancount/2023/: 2023-caixabank.bean
documents/CaixaBank/csv/: CaixaBank-2019010100000-20191231235959.csv  CaixaBank-20200101000000-20201231235959.csv  CaixaBank-20220101000000-20221231235959.csv  CaixaBank-20230101000000-20230131235959.csv  CaixaBank-20230201000000-20230231235959.csv  CaixaBank-20230301000000-20230331235959.csv  TT200122.csv
documents/Paypal/beancount/2019/: 2019-paypal.bean
documents/Paypal/csv/: Paypal-20190601000000-20191231235959.CSV  Paypal-20200101000000-20201231235959-20220117142516.CSV  Paypal-20210101000000-20211231235959-20220117121451.CSV
importers/caixabank/: __init__.py
importers/paypal/: __init__.py
ledger/: README.md
readers/: ofx_reader.py  reader.py
src/importers/caixabank/: __init__.py
src/importers/n26/: __init__.py
src/importers/paypal/: __init__.py
src/importers/revolut/: __init__.py
src/readers/: csv_reader.py  ofx_reader.py  reader.py
src/transactions/: banking.py  common.py  transaction_builder.py
src/util/: errors.py  strings.py
utilities/: strings.py
(+2 files in other folders)
